--- a/server/smarthome/src/main/resources/application.properties
+++ b/server/smarthome/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= jdbc:mysql://${MYSQL_HOST:localhost}:3306/smarthome
-spring.datasource.username=root
+spring.datasource.url= jdbc:mysql://anton.sch.bme.hu:3306/smarthome
+spring.datasource.username=itcatcetc
 spring.datasource.password=itcatcetc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
