--- a/server/smarthome/src/main/resources/application.properties
+++ b/server/smarthome/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=itcatcetc
 spring.datasource.password=itcatcetc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 server.error.include-message=always
 
