--- a/server/smarthome/pom.xml
+++ b/server/smarthome/pom.xml
@@ -37,6 +37,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,12 +64,6 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
-
-        <!--<dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-            <version>5.7.7</version>
-        </dependency>-->
     </dependencies>
 
     <build>
