--- a/server/smarthome/src/main/resources/application.properties
+++ b/server/smarthome/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 server.error.include-message=always
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.security=TRACE
 ```
 
