--- a/server/smarthome/src/main/resources/application.properties
+++ b/server/smarthome/src/main/resources/application.properties
@@ -5,14 +5,14 @@ spring.datasource.url= jdbc:mysql://anton.sch.bme.hu:3306/smarthome
 spring.datasource.username=itcatcetc
 spring.datasource.password=itcatcetc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 server.error.include-message=always
 
 logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type=TRACE
-logging.level.org.springframework.security=TRACE
+logging.level.org.hibernate.type=INFO
+logging.level.org.springframework.security=INFO
 
 spring.mail.host=smtp.ethereal.email
 spring.mail.port=587
