--- a/server/smarthome/src/main/resources/application.properties
+++ b/server/smarthome/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8081
+server.port=${PORT:8081}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://anton.sch.bme.hu:3306/smarthome
-spring.datasource.username=itcatcetc
-spring.datasource.password=itcatcetc
+spring.datasource.url=jdbc:mysql://${DATABASE_URL}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
