--- a/server/smarthome/Dockerfile
+++ b/server/smarthome/Dockerfile
@@ -3,6 +3,7 @@ COPY src /usr/src/app/src
 COPY pom.xml /usr/src/app
 COPY .mvn /usr/src/app/.mvn
 COPY mvnw /usr/src/app/
+RUN chmod +x /usr/src/app/mvnw
 RUN cd /usr/src/app && ./mvnw -f pom.xml clean package
 
 FROM --platform=linux/amd64 eclipse-temurin:17.0.1_12-jdk-alpine
