--- a/server/smarthome/docker-compose.yml
+++ b/server/smarthome/docker-compose.yml
@@ -9,14 +9,15 @@ services:
       MYSQL_DATABASE: smarthome
       MYSQL_USER: itcatcetc
       MYSQL_PASSWORD: itcatcetc
+    ports:
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
   web:
     build:
-        context: .
-        dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile
     environment:
-      PORT: 80
       DATABASE_URL: db
       DATABASE_PORT: 3306
       DATABASE_NAME: smarthome
@@ -24,9 +25,11 @@ services:
       DATABASE_PASSWORD: itcatcetc
     restart: always
     ports:
-      - "8081:80"
+      - "8081:8081"
     depends_on:
       - db
+networks:
+  default:
 
 volumes:
   mysql_data:
